feat:content-update

--- a/src/main/component/card.css
+++ b/src/main/component/card.css
@@ -27,7 +27,7 @@
     margin: 0 auto;
 }
 .primary-card :not(img){
-    padding: 0 10px;
+    padding: 0 15px;
 }
 .primary-card img{
     width: 100%;
@@ -45,6 +45,7 @@
 }
 .spec1,.spec2{
     display: flex;
+    background-color: #fff;
 }
 .spec1 :nth-child(2){
     border: 1px solid var(--br-dark);
@@ -65,4 +66,14 @@
 }
 .social-media svg{
     width: 100%;cursor: pointer;
+}
+
+.content{
+    height: 200px;
+    z-index: -1;
+    overflow: hidden;
+}
+
+.read-more{
+    padding-left: 0 !important;
 }
