--- a/src/main/home.css
+++ b/src/main/home.css
@@ -77,7 +77,7 @@
     box-shadow: 0px 1px 5px 0px #bdbebf;
     padding: 10px;
     height: fit-content;
-    width: 20%;
+    width: clamp(220px,20%,220px);
 }
 @media screen and (max-width:800px) {
     .map{
