--- a/src/main/product/product.css
+++ b/src/main/product/product.css
@@ -12,7 +12,7 @@
 }
 .product-section-1 .img img{
     width: 70vw;
-    height: 100%;
+    height: 350px;
     object-fit: cover;
     background-position: 100px  ;
 }
@@ -25,6 +25,7 @@
     /* background-color: #eee; */
     width: 100%;
     box-sizing: border-box;
+    height: fit-content;
 }
 @media screen and (max-width:1000px) {
     .product-section-1{
@@ -65,8 +66,10 @@ section :is(h1,h2,h3,h4,h5,p){margin: 0;}
     column-gap: 20px;
 }
 .info :last-child{
-    grid-column: 1/3;
-    width: 50%;
+    /* grid-column: 1/3; */ 
+    grid-column: 2/3; 
+    /* width: 50%; */
+    width: 100%;
     margin: 0 auto;
 }
 .points{
@@ -83,9 +86,11 @@ section :is(h1,h2,h3,h4,h5,p){margin: 0;}
     font-size: 20px;
 }
 .points p{
-    font-weight: 100;
+    font-weight: 400;
     font-size: 14px;
     color: #000;
+    width: 100% !important;
+    text-align: center;
 }
 .info button{
     border: none;
