--- a/src/main/testimonial/tCard.css
+++ b/src/main/testimonial/tCard.css
@@ -3,7 +3,7 @@
     align-items: center;
     box-shadow: 0px 0px  6px 0 #c0bfbfea;
     border: 1px solid #ccc;
-    height: fit-content;
+    height: 450px;
     gap: 10px;
 }
 .test-card :is(h2,p)    {
@@ -11,14 +11,14 @@
 }
 .test-card{
     min-width: 60vw;
-    padding: 20px 20px ;
+    padding: 20px 10px ;
     transition: transform .5s ease-in-out;
 }
 .test-card *{
     width: 70%;
 }
 .test-card img{
-    width: 70%;
+    width: 65%;
     border-radius: 50%;
     aspect-ratio: 1/1;
 }
@@ -31,18 +31,20 @@
     font-size: 13px;
 }
 .customer-message{
-    margin-top: 30px;
+    margin-top: 10px;
     color: #898989;
-    font-size: 13px;
+    font-size: 15px;
     
 }
 @media screen and (min-width:800px) {
     .test-card{
         display: grid;
         grid-template-columns: auto 1fr;
-        column-gap: 30px;
+        column-gap: 10px;
         max-width: 45%;
         min-width: 45%;
+        padding: 20px 20px ;
+        height: 300px;
     }
     .test-card img{
         width: 120px;
